Minor edits while in meeting

--- a/src/notebooks/linear/cdlgssm_learnParams_oscillator_fixedSampleRate.ipynb
+++ b/src/notebooks/linear/cdlgssm_learnParams_oscillator_fixedSampleRate.ipynb
@@ -6,7 +6,7 @@
     "id": "FwspQ4wDgnp3"
    },
    "source": [
-    "# MAP parameter estimation for an LG-SSM using EM and SGD"
+    "# MAP parameter estimation for an LG-SSM using SGD"
    ]
   },
   {
