--- a/src/notebooks/linear/cdlgssm_learnParams_oscillator_irregularSampleRate.ipynb
+++ b/src/notebooks/linear/cdlgssm_learnParams_oscillator_irregularSampleRate.ipynb
@@ -6,7 +6,7 @@
     "id": "FwspQ4wDgnp3"
    },
    "source": [
-    "# MAP parameter estimation for a CD-LGSSM using EM and SGD\n",
+    "# MAP parameter estimation for a CD-LGSSM using SGD\n",
     "\n",
     "\n"
    ]
@@ -674,7 +674,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1019,9 +1019,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParamsCDLGSSM(initial=ParamsLGSSMInitial(mean=Array([-0.00076043, -0.3918184 ], dtype=float32), cov=Array([[0.00037032, 0.00179945],\n",
+       "       [0.00179945, 0.00897145]], dtype=float32)), dynamics=ParamsCDLGSSMDynamics(weights=Array([[-0.6347235,  0.1716053],\n",
+       "       [ 0.4191336, -0.1782454]], dtype=float32), bias=Array([ 0.02515054, -0.10052635], dtype=float32), input_weights=Array([], dtype=float32), diffusion_coefficient=Array([[0.09560422, 0.08878586],\n",
+       "       [0.48572665, 0.45231572]], dtype=float32), diffusion_cov=Array([[0.10540938, 0.1009152 ],\n",
+       "       [0.1009152 , 0.19150387]], dtype=float32)), emissions=ParamsLGSSMEmissions(weights=Array([[-1.5972643 ,  0.33868888]], dtype=float32), bias=Array([-0.00871839], dtype=float32), input_weights=Array([], dtype=float32), cov=Array([[0.0002192]], dtype=float32)))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_params"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
