--- a/src/notebooks/non_linear/cd_ekf_ukf_pendulum.ipynb
+++ b/src/notebooks/non_linear/cd_ekf_ukf_pendulum.ipynb
@@ -157,15 +157,7 @@
     "r = 0.3\n",
     "\n",
     "# Diffusion coefficient\n",
-    "L = jnp.array([[0, 0], [0, 1]])\n",
-    "\n",
-    "# TODO: Are these necessary?\n",
-    "# True model functions\n",
-    "def dynamics_drift_function(x, t):\n",
-    "    return jnp.array([x[1], - g * jnp.sin(x[0])])\n",
-    "\n",
-    "def emission_function(x):\n",
-    "    return jnp.array([jnp.sin(x[0])])"
+    "L = jnp.array([[0, 0], [0, 1]])"
    ]
   },
   {
