--- a/src/notebooks/non_linear/cdnlgssm_hmc.ipynb
+++ b/src/notebooks/non_linear/cdnlgssm_hmc.ipynb
@@ -211,6 +211,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# explain learning set up:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
