--- a/src/notebooks/non_linear/ekf_ukf_pendulum_instability.ipynb
+++ b/src/notebooks/non_linear/ekf_ukf_pendulum_instability.ipynb
@@ -94,6 +94,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Important learning lesson"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here, we show that running for 10x longer time (than the original notebook) exhibits unbounded growth of the solution. This occurs with $q_c=1$ and $q_c=1e-10$. If you play with things, you will see that even with \\~0 dynamics noise, the pendulum oscillates back and forth for a few time units, then starts doing full rotations (a non-physical result that breaks conservation of energy). Reducing the integration time-step increases the time horizon for which the dynamics are stable, but the numerical solution still eventually leaves the attractor. Symplectic integrators avoid this issue by preserving energy in deterministic Hamiltonian systems. For stochastic Hamiltonian systems (i.e., the deterministic physics obey conservation of energy, but energy is randomly introduced via stochastic forcing), one can use even more specialized integrators (see http://umu.diva-portal.org/smash/get/diva2:1391559/FULLTEXT01.pdf and https://mathweb.ucsd.edu/~j2schmit/stochasticVI.pdf). The goal of these stochastic symplectic integrators is to ensure that energy drifts only linearly (in line with what is expected from the stochastic forcings)."
    ]
   },
