Fix import path for `tree_map`
`jax.tree_map` has been deprecated, see:
https://jax.readthedocs.io/en/latest/changelog.html#jax-0-4-26-april-3-2024

--- a/docs/notebooks/slds/rbpf_maneuver.ipynb
+++ b/docs/notebooks/slds/rbpf_maneuver.ipynb
@@ -32,7 +32,8 @@
     "from functools import partial\n",
     "import sys \n",
     "sys.path.append('/Users/kostastsampourakis/Desktop/code/Python/projects/dynamax')\n",
-    "from jax import vmap, tree_map, jit\n",
+    "from jax import vmap, jit\n",
+    "from jax.tree_util import tree_map\n",
     "from dynamax.slds.inference import ParamsSLDS, LGParamsSLDS, DiscreteParamsSLDS, rbpfilter, rbpfilter_optimal\n",
     "from dynamax.slds.models import SLDS\n",
     "# import MVN from tfd\n",
