Reformatted run_sgd as wrapper of dynamax, make sure tests and NN notebooks run

--- a/src/notebooks/non_linear/cdnlgssm_hmc_l63_partial_learnNeuralNetDrift.ipynb
+++ b/src/notebooks/non_linear/cdnlgssm_hmc_l63_partial_learnNeuralNetDrift.ipynb
@@ -567,7 +567,7 @@
     "    optax.scale(-1.0),\n",
     ")\n",
     "\n",
-    "fitted_params, fitted_params_history, grad_history, marginal_lls = true_model.fit_sgd(\n",
+    "fitted_params, marginal_lls, fitted_params_history, grad_history = true_model.fit_sgd(\n",
     "    # true_params,\n",
     "    # true_props,\n",
     "    initial_params,\n",
