--- a/src/notebooks/non_linear/cdnlgssm_hmc_l63_partial_learnNeuralNetDrift_2.ipynb
+++ b/src/notebooks/non_linear/cdnlgssm_hmc_l63_partial_learnNeuralNetDrift_2.ipynb
@@ -590,7 +590,7 @@
     ")\n",
     "\n",
     "filter_hyperparams = EKFHyperParams(state_order='zeroth', cov_rescaling=1)\n",
-    "fitted_params, fitted_params_history, grad_history, marginal_lls = true_model.fit_sgd(\n",
+    "fitted_params, marginal_lls, fitted_params_history, grad_history = true_model.fit_sgd(\n",
     "    # true_params,\n",
     "    # true_props,\n",
     "    initial_params,\n",
