updated plotters for filter-then-forecast evaluations

--- a/src/notebooks/tutorial/cdnlgssm_parameter_estimation.ipynb
+++ b/src/notebooks/tutorial/cdnlgssm_parameter_estimation.ipynb
@@ -366,11 +366,11 @@
     }
    ],
    "source": [
-    "plot_lorenz_estimates(time_grid_all=t_emissions, true_states=true_states, true_emissions_noisy=true_emissions, emission_function=true_params.emissions.emission_function)\n",
+    "plot_advanced(time_grid_all=t_emissions, true_states=true_states, true_emissions_noisy=true_emissions, emission_function=true_params.emissions.emission_function)\n",
     "\n",
-    "plot_lorenz_estimates(time_grid_all=t_emissions, true_states=true_states, true_emissions_noisy=true_emissions, emission_function=true_params.emissions.emission_function, t_start=0, t_end=40)\n",
+    "plot_advanced(time_grid_all=t_emissions, true_states=true_states, true_emissions_noisy=true_emissions, emission_function=true_params.emissions.emission_function, t_start=0, t_end=40)\n",
     "\n",
-    "plot_lorenz_estimates(time_grid_all=t_emissions, true_states=true_states, true_emissions_noisy=true_emissions, emission_function=true_params.emissions.emission_function, t_start=40, t_end=50)"
+    "plot_advanced(time_grid_all=t_emissions, true_states=true_states, true_emissions_noisy=true_emissions, emission_function=true_params.emissions.emission_function, t_start=40, t_end=50)"
    ]
   },
   {
@@ -778,7 +778,7 @@
     "# We will visualize the whole time range using t_start=None and t_end=None.\n",
     "# We will also zoom in on the first 40 time units using t_start=0 and t_end=40.\n",
     "for t_start, t_end in [(None, None), (0, 40), (40, 50)]:\n",
-    "    plot_lorenz_estimates(\n",
+    "    plot_advanced(\n",
     "        time_grid_all=t_emissions,\n",
     "        true_states=true_states,\n",
     "        true_emissions_noisy=true_emissions,\n",
