--- a/src/notebooks/linear/cdlgssm_learnParams_oscillator_fixedSampleRate.ipynb
+++ b/src/notebooks/linear/cdlgssm_learnParams_oscillator_fixedSampleRate.ipynb
@@ -6,7 +6,7 @@
     "id": "FwspQ4wDgnp3"
    },
    "source": [
-    "# MAP parameter estimation for an LG-SSM using SGD"
+    "# MLE parameter estimation for an LG-SSM using SGD"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "hduq_nodynamax",
+   "display_name": "cd_dynamax",
    "language": "python",
    "name": "python3"
   },
